# hunyuan_trainer

./: pyproject.toml
src/hunyuan_trainer/: __main__.py  dataset.toml  hunyuan_video.toml
src/hunyuan_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
