[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunyuan_trainer"
version = "0.1.0"
dependencies = [
]

[project.scripts]
hunyuan_trainer = "hunyuan_trainer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hunyuan_trainer" = ["*.toml"]

[tool.setuptools]
include-package-data = true
